--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
           <h1 class="effective-solutions">
             Effective Solutions for Your Business
           </h1>
-          <button type="button" class="effective-push">Order Service</button>
+          <button type="button" class="effective-push" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!-- #endregion Effective Solutions for Your Business -->
@@ -503,7 +505,122 @@
             </li>
           </ul>
         </div>
+        <div class="basement-main-part">
+          <form name="subscribe_form" class="subscribe-form-one">
+            <div class="subscribe-text-part">
+              <p class="social-media">Subscribe</p>
+              <div class="subscribe-email">
+                <label for="subscribe-email" aria-label="subscribe"></label>
+                <input
+                  type="email"
+                  class="subscribe-email-input"
+                  placeholder="E-mail"
+                  id="subscribe-email"
+                />
+              </div>
+            </div>
+            <div class="subscribe-button">
+              <button type="submit" class="subscribe-button-end">
+                Subscribe
+              </button>
+              <svg class="subscribe-button-image" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="popap-wrapper" data-modal>
+      <div class="popap-card">
+        <button type="button" class="popap-close" data-modal-close>
+          <svg class="popap-close-image" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <h4 class="popap-title">
+          Leave your contacts and we will call you back
+        </h4>
+        <form>
+          <div class="popap-fields">
+            <div class="popap-card-fields">
+              <label for="popap-name">Name</label>
+              <div class="popap-icon-absolut">
+                <svg class="popap-text-men" width="18" height="24">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+                <input
+                  type="text"
+                  class="popap-card-text"
+                  id="popap-name"
+                  name="popap_name"
+                />
+              </div>
+            </div>
+            <div class="popap-card-fields">
+              <label for="popap-tel">Phone</label>
+              <div class="popap-icon-absolut">
+                <div class="popap-icon-absolut">
+                  <svg class="popap-text-men" width="18" height="24">
+                    <use href="./images/icons.svg#icon-phone"></use>
+                  </svg>
+                  <input
+                    type="tel"
+                    class="popap-card-text"
+                    id="popap-tel"
+                    name="popap_tel"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="popap-card-fields">
+              <label for="popap-mail">Email</label>
+              <div class="popap-icon-absolut">
+                <div class="popap-icon-absolut">
+                  <svg class="popap-text-men" width="18" height="24">
+                    <use href="./images/icons.svg#icon-email"></use>
+                  </svg>
+                  <input
+                    type="text"
+                    class="popap-card-text"
+                    id="popap-mail"
+                    name="popap_mail"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="popap-card-fields">
+              <label for="popap-comment">Comment</label>
+              <textarea
+                name="popap_comment"
+                id="popap-comment"
+                placeholder="Text input"
+                class="popap-card-text popap-card-comment"
+              ></textarea>
+            </div>
+          </div>
+          <div class="popap-check">
+            <label for="popap-check-box" class="popap-check-conteiner">
+              <input
+                type="checkbox"
+                id="popap-check-box"
+                class="visually-hidden"
+              />
+              <span class="popap-check-box-tru">
+                <svg class="popap-check-box-image" width="10" height="8">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+              </span>
+              <div class="popap-text-policy">
+                I accept the terms and conditions of the
+                <a href="#" class="privacy-policy">Privacy Policy</a>
+              </div></label
+            >
+          </div>
+          <button type="submit" class="effective-push">Send</button>
+        </form>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
