--- a/index.html
+++ b/index.html
@@ -611,10 +611,10 @@
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
-              <div class="popap-text-policy">
+              <span class="popap-text-policy">
                 I accept the terms and conditions of the
                 <a href="#" class="privacy-policy">Privacy Policy</a>
-              </div></label
+              </span></label
             >
           </div>
           <button type="submit" class="effective-push">Send</button>
