--- a/index.html
+++ b/index.html
@@ -506,19 +506,18 @@
           </ul>
         </div>
         <div class="basement-main-part">
+          <p class="social-media">Subscribe</p>
           <form name="subscribe_form" class="subscribe-form-one">
-            <div class="subscribe-text-part">
-              <p class="social-media">Subscribe</p>
-              <div class="subscribe-email">
-                <label for="subscribe-email" aria-label="subscribe"></label>
-                <input
-                  type="email"
-                  class="subscribe-email-input"
-                  placeholder="E-mail"
-                  id="subscribe-email"
-                />
-              </div>
+            <div class="subscribe-email">
+              <label for="subscribe-email" aria-label="subscribe"></label>
+              <input
+                type="email"
+                class="subscribe-email-input"
+                placeholder="E-mail"
+                id="subscribe-email"
+              />
             </div>
+
             <div class="subscribe-button">
               <button type="submit" class="subscribe-button-end">
                 Subscribe
@@ -538,9 +537,7 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <h4 class="popap-title">
-          Leave your contacts and we will call you back
-        </h4>
+        <p class="popap-title">Leave your contacts and we will call you back</p>
         <form>
           <div class="popap-fields">
             <div class="popap-card-fields">
