--- a/index.html
+++ b/index.html
@@ -508,21 +508,23 @@
         <div class="basement-main-part">
           <p class="social-media">Subscribe</p>
           <form name="subscribe_form" class="subscribe-form-one">
-            <div class="subscribe-email">
-              <label for="subscribe-email" aria-label="subscribe"></label>
-              <input
-                type="email"
-                class="subscribe-email-input"
-                placeholder="E-mail"
-                id="subscribe-email"
-              />
-            </div>
+            <label for="subscribe-email" aria-label="subscribe"></label>
+            <input
+              type="email"
+              class="subscribe-email-input"
+              placeholder="E-mail"
+              id="subscribe-email"
+            />
 
             <div class="subscribe-button">
               <button type="submit" class="subscribe-button-end">
                 Subscribe
               </button>
-              <svg class="subscribe-button-image" width="24" height="24">
+              <svg
+                class="subscribe-button-image transform"
+                width="24"
+                height="24"
+              >
                 <use href="./images/icons.svg#icon-subscribe"></use>
               </svg>
             </div>
@@ -533,7 +535,7 @@
     <div class="popap-wrapper" data-modal>
       <div class="popap-card">
         <button type="button" class="popap-close" data-modal-close>
-          <svg class="popap-close-image" width="8" height="8">
+          <svg class="popap-close-image transform" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
@@ -541,53 +543,53 @@
         <form>
           <div class="popap-fields">
             <div class="popap-card-fields">
-              <label for="popap-name">Name</label>
+              <label for="popap-name popap-text-all">Name</label>
               <div class="popap-icon-absolut">
-                <svg class="popap-text-men" width="18" height="24">
-                  <use href="./images/icons.svg#icon-person"></use>
-                </svg>
                 <input
                   type="text"
                   class="popap-card-text"
                   id="popap-name"
-                  name="popap_name"
+                  name="user-name"
                 />
+                <svg class="popap-text-men transform" width="18" height="24">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
               </div>
             </div>
             <div class="popap-card-fields">
-              <label for="popap-tel">Phone</label>
+              <label for="popap-tel popap-text-all">Phone</label>
               <div class="popap-icon-absolut">
                 <div class="popap-icon-absolut">
-                  <svg class="popap-text-men" width="18" height="24">
-                    <use href="./images/icons.svg#icon-phone"></use>
-                  </svg>
                   <input
                     type="tel"
                     class="popap-card-text"
                     id="popap-tel"
                     name="popap_tel"
                   />
+                  <svg class="popap-text-men transform" width="18" height="24">
+                    <use href="./images/icons.svg#icon-phone"></use>
+                  </svg>
                 </div>
               </div>
             </div>
             <div class="popap-card-fields">
-              <label for="popap-mail">Email</label>
+              <label for="popap-mail popap-text-all">Email</label>
               <div class="popap-icon-absolut">
                 <div class="popap-icon-absolut">
-                  <svg class="popap-text-men" width="18" height="24">
-                    <use href="./images/icons.svg#icon-email"></use>
-                  </svg>
                   <input
                     type="text"
                     class="popap-card-text"
                     id="popap-mail"
                     name="popap_mail"
                   />
+                  <svg class="popap-text-men transform" width="18" height="24">
+                    <use href="./images/icons.svg#icon-email"></use>
+                  </svg>
                 </div>
               </div>
             </div>
             <div class="popap-card-fields">
-              <label for="popap-comment">Comment</label>
+              <label for="popap-comment popap-text-all">Comment</label>
               <textarea
                 name="popap_comment"
                 id="popap-comment"
@@ -597,14 +599,21 @@
             </div>
           </div>
           <div class="popap-check">
-            <label for="popap-check-box" class="popap-check-conteiner">
+            <label
+              for="popap-check-box popap-text-all"
+              class="popap-check-conteiner"
+            >
               <input
                 type="checkbox"
                 id="popap-check-box"
                 class="visually-hidden"
               />
               <span class="popap-check-box-tru">
-                <svg class="popap-check-box-image" width="10" height="8">
+                <svg
+                  class="popap-check-box-image transform"
+                  width="10"
+                  height="8"
+                >
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
