--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
         <form>
           <div class="popap-fields">
             <div class="popap-card-fields">
-              <label for="popap-name popap-text-all">Name</label>
+              <label for="popap-name" class="popap-text-all">Name</label>
               <div class="popap-icon-absolut">
                 <input
                   type="text"
@@ -557,7 +557,7 @@
               </div>
             </div>
             <div class="popap-card-fields">
-              <label for="popap-tel popap-text-all">Phone</label>
+              <label for="popap-tel" class="popap-text-all">Phone</label>
               <div class="popap-icon-absolut">
                 <div class="popap-icon-absolut">
                   <input
@@ -573,7 +573,7 @@
               </div>
             </div>
             <div class="popap-card-fields">
-              <label for="popap-mail popap-text-all">Email</label>
+              <label for="popap-mail" class="popap-text-all">Email</label>
               <div class="popap-icon-absolut">
                 <div class="popap-icon-absolut">
                   <input
@@ -589,7 +589,7 @@
               </div>
             </div>
             <div class="popap-card-fields">
-              <label for="popap-comment popap-text-all">Comment</label>
+              <label for="popap-comment" class="popap-text-all">Comment</label>
               <textarea
                 name="popap_comment"
                 id="popap-comment"
