--- a/index.html
+++ b/index.html
@@ -512,13 +512,14 @@
               for="subscribe-email"
               class="subscribe-novisible"
               aria-label="subscribe"
-            ></label>
-            <input
-              type="email"
-              class="subscribe-email-input"
-              placeholder="E-mail"
-              id="subscribe-email"
-            />
+            >
+              <input
+                type="email"
+                class="subscribe-email-input"
+                placeholder="E-mail"
+                id="subscribe-email"
+              />
+            </label>
             <button type="submit" class="subscribe-button-end">
               Subscribe
               <svg
