--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@
                 class="subscribe-email-input"
                 placeholder="E-mail"
                 id="subscribe-email"
+                name="emaiil-subscribe"
               />
             </label>
             <button type="submit" class="subscribe-button-end">
@@ -534,6 +535,7 @@
         </div>
       </div>
     </footer>
+    <!-- popap -->
     <div class="popap-wrapper" data-modal>
       <div class="popap-card">
         <button type="button" class="popap-close" data-modal-close>
@@ -544,61 +546,55 @@
         <p class="popap-title">Leave your contacts and we will call you back</p>
         <form>
           <div class="popap-fields">
-            <div class="popap-card-fields">
-              <label for="popap-name">Name</label>
+            <label for="popap-name" class="name-text-popap">Name</label>
+            <div class="popap-icon-absolut">
+              <input
+                type="text"
+                class="popap-card-text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="popap-text-men transform" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+
+            <label for="popap-tel" class="name-text-popap">Phone</label>
+            <div class="popap-icon-absolut">
+              <div class="popap-icon-absolut">
+                <input
+                  type="tel"
+                  class="popap-card-text"
+                  id="popap-tel"
+                  name="popap_tel"
+                />
+                <svg class="popap-text-men transform" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </div>
+            </div>
+
+            <label for="popap-mail" class="name-text-popap">Email</label>
+            <div class="popap-icon-absolut">
               <div class="popap-icon-absolut">
                 <input
                   type="text"
                   class="popap-card-text"
-                  id="popap-name"
-                  name="user-name"
+                  id="popap-mail"
+                  name="popap_mail"
                 />
                 <svg class="popap-text-men transform" width="18" height="24">
-                  <use href="./images/icons.svg#icon-person"></use>
+                  <use href="./images/icons.svg#icon-email"></use>
                 </svg>
               </div>
             </div>
-            <div class="popap-card-fields">
-              <label for="popap-tel">Phone</label>
-              <div class="popap-icon-absolut">
-                <div class="popap-icon-absolut">
-                  <input
-                    type="tel"
-                    class="popap-card-text"
-                    id="popap-tel"
-                    name="popap_tel"
-                  />
-                  <svg class="popap-text-men transform" width="18" height="24">
-                    <use href="./images/icons.svg#icon-phone"></use>
-                  </svg>
-                </div>
-              </div>
-            </div>
-            <div class="popap-card-fields">
-              <label for="popap-mail">Email</label>
-              <div class="popap-icon-absolut">
-                <div class="popap-icon-absolut">
-                  <input
-                    type="text"
-                    class="popap-card-text"
-                    id="popap-mail"
-                    name="popap_mail"
-                  />
-                  <svg class="popap-text-men transform" width="18" height="24">
-                    <use href="./images/icons.svg#icon-email"></use>
-                  </svg>
-                </div>
-              </div>
-            </div>
-            <div class="popap-card-fields">
-              <label for="popap-comment">Comment</label>
-              <textarea
-                name="popap_comment"
-                id="popap-comment"
-                placeholder="Text input"
-                class="popap-card-text popap-card-comment"
-              ></textarea>
-            </div>
+            <label for="popap-comment" class="name-text-popap">Comment</label>
+            <textarea
+              name="popap_comment"
+              id="popap-comment"
+              placeholder="Text input"
+              class="popap-card-text popap-card-comment"
+            ></textarea>
           </div>
           <div class="popap-check">
             <label for="popap-check-box" class="popap-check-conteiner">
