--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
         <p class="popap-title">Leave your contacts and we will call you back</p>
         <form>
           <div class="popap-fields">
-            <label for="popap-name" class="name-text-popap">Name</label>
+            <label for="user-name" class="name-text-popap">Name</label>
             <div class="popap-icon-absolut">
               <input
                 type="text"
