--- a/index.html
+++ b/index.html
@@ -558,50 +558,54 @@
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
-
+          </div>
+          <div class="popap-fields">
             <label for="popap-tel" class="name-text-popap">Phone</label>
             <div class="popap-icon-absolut">
-              <div class="popap-icon-absolut">
-                <input
-                  type="tel"
-                  class="popap-card-text"
-                  id="popap-tel"
-                  name="popap_tel"
-                />
-                <svg class="popap-text-men transform" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phone"></use>
-                </svg>
-              </div>
+              <input
+                type="tel"
+                class="popap-card-text"
+                id="popap-tel"
+                name="popap_tel"
+              />
+              <svg class="popap-text-men transform" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
             </div>
+          </div>
 
+          <div class="popap-fields">
             <label for="popap-mail" class="name-text-popap">Email</label>
             <div class="popap-icon-absolut">
-              <div class="popap-icon-absolut">
-                <input
-                  type="text"
-                  class="popap-card-text"
-                  id="popap-mail"
-                  name="popap_mail"
-                />
-                <svg class="popap-text-men transform" width="18" height="24">
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-              </div>
+              <input
+                type="text"
+                class="popap-card-text"
+                id="popap-mail"
+                name="popap_mail"
+              />
+              <svg class="popap-text-men transform" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
             </div>
-            <label for="popap-comment" class="name-text-popap">Comment</label>
+          </div>
+          <div class="popap-fields">
+            <label for="user-comment" class="name-text-popap">Comment</label>
             <textarea
               name="popap_comment"
-              id="popap-comment"
+              id="user-comment"
               placeholder="Text input"
               class="popap-card-text popap-card-comment"
             ></textarea>
           </div>
+
           <div class="popap-check">
-            <label for="popap-check-box" class="popap-check-conteiner">
+            <label for="user-privacy" class="popap-check-conteiner">
               <input
                 type="checkbox"
-                id="popap-check-box"
+                id="user-privacy"
                 class="visually-hidden"
+                name="user-privacy"
+                value="true"
               />
               <span class="popap-check-box-tru">
                 <svg
