--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
           <div class="popap-fields">
             <label for="user-comment" class="name-text-popap">Comment</label>
             <textarea
-              name="popap_comment"
+              name="user-comment"
               id="user-comment"
               placeholder="Text input"
               class="popap-card-text popap-card-comment"
@@ -599,14 +599,14 @@
           </div>
 
           <div class="popap-check">
+            <input
+              type="checkbox"
+              id="user-privacy"
+              class="visually-hidden"
+              name="user-privacy"
+              value="true"
+            />
             <label for="user-privacy" class="popap-check-conteiner">
-              <input
-                type="checkbox"
-                id="user-privacy"
-                class="visually-hidden"
-                name="user-privacy"
-                value="true"
-              />
               <span class="popap-check-box-tru">
                 <svg
                   class="popap-check-box-image transform"
