--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
               </svg>
             </div>
           </div>
-          <div class="popap-fields">
+          <div class="popap-fields popap-fields-last">
             <label for="user-comment" class="name-text-popap">Comment</label>
             <textarea
               name="user-comment"
@@ -599,14 +599,14 @@
           </div>
 
           <div class="popap-check">
-            <input
-              type="checkbox"
-              id="user-privacy"
-              class="visually-hidden"
-              name="user-privacy"
-              value="true"
-            />
             <label for="user-privacy" class="popap-check-conteiner">
+              <input
+                type="checkbox"
+                id="user-privacy"
+                class="visually-hidden"
+                name="user-privacy"
+                value="true"
+              />
               <span class="popap-check-box-tru">
                 <svg
                   class="popap-check-box-image transform"
