--- a/index.html
+++ b/index.html
@@ -599,14 +599,14 @@
           </div>
 
           <div class="popap-check">
+            <input
+              type="checkbox"
+              id="user-privacy"
+              class="visually-hidden popap-check-privacy"
+              name="user-privacy"
+              value="true"
+            />
             <label for="user-privacy" class="popap-check-conteiner">
-              <input
-                type="checkbox"
-                id="user-privacy"
-                class="visually-hidden"
-                name="user-privacy"
-                value="true"
-              />
               <span class="popap-check-box-tru">
                 <svg
                   class="popap-check-box-image transform"
