--- a/index.html
+++ b/index.html
@@ -616,11 +616,10 @@
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
-              <span class="popap-text-policy">
-                I accept the terms and conditions of the
-                <a href="#" class="privacy-policy">Privacy Policy</a>
-              </span></label
-            >
+
+              I accept the terms and conditions of the
+              <a href="#" class="privacy-policy">Privacy Policy</a>
+            </label>
           </div>
           <button type="submit" class="effective-push">Send</button>
         </form>
