--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
             <input
               type="checkbox"
               id="user-privacy"
-              class="visually-hidden popap-check-privacy"
+              class="visually-hidden"
               name="user-privacy"
               value="true"
             />
